bug fix: sidenavs elemnts going out of screen

--- a/app/statics/css/sidenav.css
+++ b/app/statics/css/sidenav.css
@@ -9,6 +9,7 @@
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    padding-bottom: 50px;
   }
 
   .sidenav-left{
